fixed alignment of flex boxes

--- a/style.css
+++ b/style.css
@@ -4,24 +4,64 @@
     margin: 0;
     font-family: sans-serif;
 }
+
+
 body {
-    background-color: #dbdbd9;
+    background-color: #f8f8f8;
 
 }
+
+h2{
+    text-align: center;
+    justify-content: center;
+    color: rgb(255, 255, 255);
+    font-size: 100px;
+    font-style: italic;
+    padding-top: 100px;
+}
+
+h3{
+    margin-top: 100px;
+    text-decoration: underline;
+}
+
+h4{
+    border: solid rgb(6, 16, 20);
+    border-radius: 20px;
+    background-color: rgb(6, 16, 20);
+    background-size: 10px;
+    font-style: italic;
+    color: white;
+    text-align: center;
+    
+}
+
+p {
+    font-size: 20px;
+    padding: 45px;
+    margin: 70px; 
+    
+}
+
+header { 
+    padding: 10px;    
+    font-family: sans-serif;
+    background-color: rgb(36, 36, 36);
+    color: rgb(248, 246, 246);
+    font-size: 30px;
+    }
+    
+ header img{
+    max-width: 3%;
+    max-height: 10%;
+    
+ }
 
 nav {
        
     float: right;
     font-family: sans-serif;
     font-size: 20px;
-    
-}
-
-nav ul li {
-    display: inline-block;
-    margin: 10px;    
-    padding-top: 50px
-    
     
 }
 
@@ -44,19 +84,7 @@ nav a:active {
     text-decoration: underline;
   }
 
-  header { 
-    padding: 10px;    
-    font-family: sans-serif;
-    background-color: rgb(36, 36, 36);
-    color: rgb(248, 246, 246);
-    font-size: 30px;
-    }
-    
- header img{
-    max-width: 3%;
-    max-height: 10%;
-    
- }
+  
 
 main{
     padding-top: 5px;
@@ -66,37 +94,6 @@ main{
     border-radius: 50%;
 }
 
-
-header h1 {
-    display: inline-block;
-    font-size: 48px;
-    margin-left: 100px;
-    } 
-    
-    
-
-.banner {
-        background-image: url("./images/pittsburgh.jpg");
-        background-size: cover;
-        background-position: center;
-        display: flex;
-        justify-content: flex-end;
-        align-items: flex-end;
-        text-align: right;
-        padding: 2% 6%;
-        min-height: 30vh;
-        background-blend-mode: soft-light;
-    }
-
-h2{
-        text-align: center;
-        justify-content: center;
-        padding-right: 900px;
-        color: rgb(255, 255, 255);
-        font-size: 50px;
-        font-style: italic;
-        margin-bottom: 100px;
-    }
 
     .page-section {
         margin: 25px 0;
@@ -108,52 +105,19 @@ h2{
         justify-content: space-between;
       }
       
-      .page-section > h3 {
-        flex: 0 0 20%;
-        text-align: right;
-        padding-right: 15px;
-        border-right: 4px solid black;
-        font-size: 2vw;
-        line-height: 1.1;
-        
-      }
       
-      .page-section > div {
-        flex: 0 0 77%;
-      }
       
       .page-section p {
         margin-bottom: 20px;
       }
-      
-    
 
-    p {
-        font-size: 20px;
-        padding: 45px;
-        margin: 70px; 
+    .flex {
+        display: flex;
+        flex-wrap:  wrap; 
+        justify-content: center;
+        align-content: space-around;
         
-    }
-
-    h3{
-        margin-top: 100px;
-        text-decoration: underline;
-    }
-
-    h4{
-        border: solid black;
-        background-color: black;
-        background-size: 10px;
-        text-align: center;
         
-    }
-    
-    /* flexbox start */
-
-.flex {
-    display: flex;
-    flex-wrap:  wrap; 
-    flex-flow: column wrap;
     /* justify property defines how the browser distributes space between and around the main axis. */
     
 
@@ -164,11 +128,13 @@ h2{
 .box {
     border-color: rgb(36, 36, 36);
     border-style: solid;
-    margin: 50px;
+    border-radius: 15px;
+    margin: 100px;
+    
     
 }
 
-.box-tech{
+.tech-pic{
     background-image: url("./images/technology.png");
     background-position: center;
     background-size: 500px;
@@ -177,7 +143,7 @@ h2{
     width: 500px;
 }
 
-.box-msi{
+ .msi-pic{ 
     background-image: url("./images/msi.png");
     background-position: center;
     background-size: 500px;
@@ -187,7 +153,7 @@ h2{
     
 }
 
-.box-dice{
+.dice-pic{
     background-image: url("./images/dice.png");
     background-position: center;
     background-size: 500px;
@@ -196,7 +162,7 @@ h2{
     width: 500px;
 }
 
-.box-bill{
+.bill-pic{
     background-image: url("./images/billiards.png");
     background-position: center;
     background-size: 500px;
@@ -211,37 +177,7 @@ h2{
     
     opacity: .6;
     background-color: black;
-    
-    
-    
 }
-
-/* .box1 img { 
-    display: block;
-    margin: 10px auto;
-    max-width: 800px;
-    
-}
-
-.box2 img {
-
-    display: block;
-    margin: 10px auto;
-    max-width: 690px;
-    
-}
-
-.box3 img {
-    display: block;
-    margin: 10px auto;
-    max-width: 696px;
-}
-
-.box4 img {
-    display: block;
-    margin: 10px auto;
-    max-width: 800px;
-}*/
 
 .contact {
     display: flex;
@@ -252,13 +188,7 @@ h2{
     
   }
 
-  .contact address {
-    
-    align-items: flex-start;
-    align-items: center;
-    padding-top: 90px;
-    padding-left: 300px;
-  }
+  
 
   .contact a {
     color: black;
@@ -272,14 +202,66 @@ h2{
     display: inline-block;
   }
 
-@media screen and (max-width: 980px) {
+
+  @media screen and (max-width: 980px) {
     header {
       padding: 0 0 10px 0;
       justify-content: center;
       text-align: center;
     }
 }
+
+.page-section > h3 {
+    flex: 0 0 20%;
+    text-align: right;
+    padding-right: 15px;
+    border-right: 4px solid black;
+    font-size: 2vw;
+    line-height: 1.1;
     
+  }
+  
+  .page-section > div {
+    flex: 0 0 77%;
+  }
+
+    header h1 {
+        display: inline-block;
+        font-size: 48px;
+        margin-left: 100px;
+    }  
+
+    nav ul li {
+        display: inline-block;
+        margin: 10px;    
+        padding-top: 50px
+    }
+
+    @media screen and (max-width: 768px) {
+        .flex-item,
+        .flex-item:first-child {
+          flex-basis: 100%;
+        }
+      
+        .flex-item:first-child {
+          min-height: 150px;
+        }
+    }      
+
+    .contact address {
+    
+        align-items: flex-start;
+        align-items: center;
+        padding-top: 90px;
+        padding-left: 300px;
+      }
+
+      .banner {
+        background-image: url("./images/StockSnap_GD3QWR1UJX.jpg");
+        padding: 2% 6%;
+        min-height: 30vh;
+    
+    }
 
       
     
